Updated assembly definitions to not error out when building asset bundles. Updated shader fallback stuff

--- a/Scripts/Editor/VRChat/Pumkin.AvatarTools2.VRChat.asmdef
+++ b/Scripts/Editor/VRChat/Pumkin.AvatarTools2.VRChat.asmdef
@@ -10,5 +10,9 @@
     "overrideReferences": false,
     "precompiledReferences": [],
     "autoReferenced": false,
-    "defineConstraints": []
+    "defineConstraints": [
+        "UNITY_EDITOR",
+        "VRC_SDK_VRCSDK2",
+        "!UDON"
+    ]
 }
