--- a/Scripts/Editor/AvatarTools/Pumkin.AvatarTools2.asmdef
+++ b/Scripts/Editor/AvatarTools/Pumkin.AvatarTools2.asmdef
@@ -8,5 +8,7 @@
     "overrideReferences": false,
     "precompiledReferences": [],
     "autoReferenced": false,
-    "defineConstraints": []
+    "defineConstraints": [
+        "UNITY_EDITOR"
+    ]
 }
