--- a/Scripts/Editor/VRM/PumkinTools2_VRM.asmdef
+++ b/Scripts/Editor/VRM/PumkinTools2_VRM.asmdef
@@ -11,5 +11,7 @@
     "overrideReferences": false,
     "precompiledReferences": [],
     "autoReferenced": false,
-    "defineConstraints": []
+    "defineConstraints": [
+        "UNITY_EDITOR"
+    ]
 }
