Added define manager from old tools and a manager for vrchat defines

--- a/Scripts/Editor/VRChat/Pumkin.AvatarTools2.VRChat.asmdef
+++ b/Scripts/Editor/VRChat/Pumkin.AvatarTools2.VRChat.asmdef
@@ -12,7 +12,7 @@
     "autoReferenced": false,
     "defineConstraints": [
         "UNITY_EDITOR",
-        "VRC_SDK_VRCSDK3",
+        "PUMKIN_VRC_SDK",
         "!UDON"
     ]
 }
